<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vowcher</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="imgdesc">Vowcher Logo</string>
    <string name="title">Enter a title&#8230;</string>
    <string name="amount">Enter the amount&#8230;</string>
    <string name="Voucher_type">Select Voucher Type</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_display_message">Logged in</string>
    <string name="title_activity_voucher_add">VoucherAdd</string>
    <string name="title_activity_datepick">Select date&#8230;</string>
    <string name="date">Date</string>
    <string name="desc">Enter description&#8230;</string>
    <string name="receipt">Upload Receipt&#8230;</string>
    <string name="chooser_title">Select action</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_element">ListElement</string>

</resources>