<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Footer Start -->

        <LinearLayout
            android:id="@id/footer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat" >
        </LinearLayout>
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <EditText
                android:id="@+id/titletext"
                style="@style/primestyle"
                android:hint="@string/title"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/amounttext"
                style="@style/primestyle"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView1"
                style="@style/primestyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Voucher_type"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/VoucherTypespinner"
                style="@style/primestyle" />

            <LinearLayout
                android:id="@+id/datelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/datetext"
                    style="@style/primestyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/title_activity_datepick"
                    android:inputType="date"
                    android:onClick="showDatePicker" />

                <Button
                    android:id="@+id/datebutton"
                    style="@style/primestyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:layout_weight="1"
                    android:onClick="showDatePicker"
                    android:text="@string/date" />
            </LinearLayout>

            <EditText
                android:id="@+id/descriptiontext"
                style="@style/primestyle"
                android:hint="@string/desc"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/receiptbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/primestyle"
                android:text="@string/receipt" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>