<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header Starts -->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/imgdesc"
                android:src="@drawable/logo" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Footer Start -->

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
            android:orientation="vertical" >
        </LinearLayout> <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <EditText
                android:id="@+id/usernametext"
                style="@style/primestyle"
                android:fontFamily="normal"
                android:hint="@string/username"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/passwordtext"
                style="@style/primestyle"
                android:fontFamily="normal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/gradient_button"
                android:fontFamily="normal"
                android:onClick="requestLogin"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:typeface="monospace" />

        </LinearLayout>

        <!-- Login Form Ends -->

        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginLeft="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#990000" />

    </RelativeLayout>

</ScrollView>